fixed category overlap

--- a/src/plugins/cloud-foundry/view/applications/application/services/service/service.scss
+++ b/src/plugins/cloud-foundry/view/applications/application/services/service/service.scss
@@ -37,4 +37,5 @@ div.service-badge .service-icon {
 div.service-category h4 {
   padding-top:0px;
   margin-top: 0px;
+  margin-left:15px;
 }
